--- a/kocomRS485/config.json
+++ b/kocomRS485/config.json
@@ -19,10 +19,10 @@
   ],
   "options": {
     "RS485": {
-      "type": "Serial"
+      "type": "socket"
     },
     "Socket": {
-      "server": "192.168.x.x",
+      "server": "192.168.0.9",
       "port": 8899
     },
     "SocketDevice": {
@@ -36,17 +36,17 @@
     },
     "MQTT": {
       "anonymous": false,
-      "server": "192.168.x.x",
-      "username": "id",
-      "password": "pw"
+      "server": "192.168.0.6",
+      "username": "parting321",
+      "password": "ghdwhsla1!"
     },
     "Wallpad": {
-      "light": false,
-      "plug": false,
-      "thermostat": false,
-      "fan": false,
-      "gas": false,
-      "elevator": false
+      "light": true,
+      "plug": true,
+      "thermostat": true,
+      "fan": true,
+      "gas": true,
+      "elevator": true
     },
     "Advanced": {
       "INIT_TEMP": 22,
@@ -62,41 +62,41 @@
       },
       {
         "name": "bedroom",
-        "number": 2
+        "number": 0
       },
       {
         "name": "room1",
-        "number": 2
+        "number": 0
       },
       {
         "name": "room2",
-        "number": 2
+        "number": 0
       },
       {
         "name": "kitchen",
-        "number": 3
+        "number": 0
       }
     ],
     "KOCOM_PLUG_SIZE": [
       {
         "name": "livingroom",
-        "number": 3
+        "number": 0
       },
       {
         "name": "bedroom",
-        "number": 2
+        "number": 0
       },
       {
         "name": "room1",
-        "number": 2
+        "number": 0
       },
       {
         "name": "room2",
-        "number": 2
+        "number": 0
       },
       {
         "name": "kitchen",
-        "number": 3
+        "number": 0
       }
     ],
     "KOCOM_ROOM": [
