--- a/kocomRS485/Dockerfile
+++ b/kocomRS485/Dockerfile
@@ -7,15 +7,12 @@ ENV LANG C.UTF-8
 COPY run.sh makeconf.sh rs485.py /
 
 # Install requirements for add-on
-RUN apt-get update && apt-get -y install jq
-RUN python3 -m pip install pyserial && \
-RUN python3 -m pip install paho-mqtt
-RUN python3 -m pip install typing_extensions
+RUN apt-get update && \
+    apt-get -y install jq && \
+    python3 -m pip install --no-cache-dir pyserial paho-mqtt typing_extensions
 
 WORKDIR /share
 
-RUN chmod a+x /makeconf.sh
-RUN chmod a+x /run.sh
+RUN chmod a+x /makeconf.sh /run.sh
 
 CMD [ "/run.sh" ]
-
